
2004-08-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRuntime.cs: initialize the response writer when finishing a
	request because it cannot be queued. Under heavy load we made new
	requests be processed before the ones that might be queued. This is
	no longer the case.

	* QueueManager.cs: instead of queueing/dequeuing separately, we now
	have a single method that does everything needed to decide which one
	will be the next request processed.

2004-08-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRuntime.cs: removed initializations to null in .cctor. Prevent
	other requests from avoiding the lock if they are received before the
	configuration system is inited. Ensure that the queue manager is not
	null before using it (it can be null while the first request is being
	processed).

2004-08-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpServerUtility.cs: ensure we have a full virtual path for the
	request being executed.

2004-08-02  Duncan Mak  <duncan@ximian.com>

	* ApplicationShutdownReason.cs: Fixed typos.

	* HttpCookieMode.cs:
	* HttpDataTransferMode.cs:
	* HttpRequestPriority.cs: Added [Serializable] attribute.
	
2004-08-02  Duncan Mak  <duncan@ximian.com>

	* ApplicationShutdownReason.cs:
	* HttpCookieMode.cs:
	* HttpDataTransferMode.cs:
	* HttpRequestPriority.cs: Added 2.0 enumerations.
	
2004-07-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: the file not found might be a dependency.

2004-07-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpCookie.cs: use invariant when formatting expires date. Fixes bug
	#61690.

2004-07-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: don't keep the session around if we got it from
	the context. Fixes bug #61232.

2004-07-06 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpUtility.cs: fixed stupid bug in UrlDecode from bytes. Closes bug
	#61181.

2004-07-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>
